force-app/main/default/objects/Contact/fields/Is_Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Contact_Owner__c</fullName>
    <formula>IF( Owner.Id == $User.Id,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Contact Owner</label>
    <type>Checkbox</type>
</CustomField>