force-app/main/default/objects/Contact/fields/VerificationCode__c.field-meta.xml
<CustomField>
    <fullName>VerificationCode__c</fullName>
    <label>VerificationCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>