force-app/main/default/objects/Contact/validationRules/Mobile_Should_have_ten_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Should_have_ten_digits</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( MobilePhone ) != 10 &amp;&amp; LEN( MobilePhone ) != 0</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Please enter 10 digit mobile number</errorMessage>
</ValidationRule>